Fixed some misaligned UI and bugs. Capped max level and added scan function and button. Final commit for v1.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -41,9 +41,9 @@
                 margin: 1.5rem;
                 gap: 2rem;
                 border-radius: 8px;
-                position: absolute;
-                left: 240px;
-                top: 250px;
+                position: relative;
+                left: 0px;
+                top: 0px;
                 z-index: -1;
                 .shop-title{
                     color: maroon;
@@ -99,6 +99,7 @@
                 grid-template-rows: repeat(var(--grid-rows), 1fr);
                 grid-template-columns: repeat(var(--grid-cols), 1fr);
                 align-items: center;
+                position: absolute;
                 z-index: 0;
             }
         }
@@ -186,45 +187,58 @@
             border: 4px solid darkcyan;
             width: 300px;
             padding: .5rem;
-            .shovels{
-                font-size: large;
-                font-weight: 600;
-                color: var(--color-font-secondary);
-                width: 200px;
-                display: flex;
-                .shovel-icon{
-                    color: darkblue;
-                    i{
-                        font-size: 1rem;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            .inventory{
+                .shovels{
+                    font-size: large;
+                    font-weight: 600;
+                    color: var(--color-font-secondary);
+                    display: flex;
+                    flex-direction: row;
+                    .shovel-icon{
+                        color: darkblue;
+                        i{
+                            font-size: 1rem;
+                        }
                     }
                 }
-            }
-            .scanners{
-                font-size: large;
-                font-weight: 600;
-                color: var(--color-font-secondary);
-                width: 200px;
-                display: flex;
-                .scanner-icon{
-                    color: darkgreen;
-                    i{
-                        font-size: 1rem;
+                .scanners{
+                    font-size: large;
+                    font-weight: 600;
+                    color: var(--color-font-secondary);
+                    display: flex;
+                    .scanner-icon{
+                        color: darkgreen;
+                        i{
+                            font-size: 1rem;
+                        }
                     }
                 }
+                .max-inventory{
+                    font-size: large;
+                    font-weight: 600;
+                    color: var(--color-font-secondary);
+                    display: flex;
+                }
+                .max-scanner{
+                    font-size: large;
+                    font-weight: 600;
+                    color: var(--color-font-secondary);
+                    display: flex;
+                }
             }
-            .max-inventory{
-                font-size: large;
+            .scan-btn{
+                font-size: medium;
                 font-weight: 600;
-                color: var(--color-font-secondary);
-                width: 200px;
+                background-color: lightgreen;
+                color: darkgreen;
+                width: 80px;
+                border-radius: 8px;
                 display: flex;
-            }
-            .max-scanner{
-                font-size: large;
-                font-weight: 600;
-                color: var(--color-font-secondary);
-                width: 200px;
-                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
         .options{
